[gd_scene load_steps=3 format=3 uid="uid://ptyyefkbmqb1"]

[ext_resource type="Script" uid="uid://bcpg1l37usbse" path="res://Scripts/main_menu.gd" id="1_28flt"]

[sub_resource type="LabelSettings" id="LabelSettings_erv1k"]
font_size = 60
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_28flt")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.992157, 0.941176, 0.839216, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -81.5
offset_right = 58.0
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Yet Another Pong Clone"
label_settings = SubResource("LabelSettings_erv1k")

[node name="1Player" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "1 Player (CPU)"

[node name="2Player" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "2 Player"

[node name="Controls" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Controls"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quit"

[connection signal="pressed" from="VBoxContainer/1Player" to="." method="_on_cpu_player_pressed"]
[connection signal="pressed" from="VBoxContainer/2Player" to="." method="_on_player_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
